@@ -1,4 +1,5 @@
 0.04
+ - Add test for element with space in attribute.
 
 0.03 2020-04-23T16:09:11+02:00
  - Add bigger test for cdata.
